@@ -1,7 +1,7 @@
 Package: startup
 Version: 0.6.1-9000
 Title: Friendly R Startup Configuration
-Depends: R (>= 2.13.0)
+Depends: R (>= 2.14.0)
 Suggests: commonmark, tools
 VignetteBuilder: startup
 Authors@R: c(person("Henrik", "Bengtsson", role=c("aut", "cre", "cph"),
