@@ -3,6 +3,10 @@ Package: startup
 
 Version: 0.6.1-9000 [2017-09-04]
 
+SIGNIFICANT CHANGES:
+
+ o Package requires R (>= 2.14.0; Oct 2011) - was R (>= 2.13.0; Apr 2011).
+
 NEW FEATURES:
 
  o Convenient session details are now gathered and recorded as R options
@@ -11,7 +15,7 @@ NEW FEATURES:
    by default, also after startup::startup() has completed.  For information
    on session details recorded, see help("startup_session_options").
 
- o Added a package vignette.
+ o Added a package vignette (available only in R >= 3.0.0).
  
  
 Version: 0.6.1 [2017-05-16]
@@ -28,7 +32,7 @@ Version: 0.6.0 [2017-04-30]
 
 SIGNIFICANT CHANGES:
 
- o Package requires R (>= 2.13.0; April 2011) - was R (>= 2.12.0; Oct 2010).
+ o Package requires R (>= 2.13.0; Apr 2011) - was R (>= 2.12.0; Oct 2010).
 
 NEW FEATURES:
 
